# pencil

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  proposed_protocol.md
src/: block.cpp  block.hpp  main.cpp  renderer.cpp  renderer.hpp  state.cpp  state.hpp
